# libgwaspp

./: .gitignore  CMakeLists.txt  Copyright  Doxygen.config  README.md  freebsd.header  libgwasppConfig.h.in
data/: Makefile  maf_spectrum.tab  simulate_data.cpp
scripts/perl/: contin_output_comparer.pl  convertPED2TPED.pl  converter.pl  genotype_set_builder.pl
src/: CMakeLists.txt  common.h
src/gzstream/: CMakeLists.txt  gzstream.cpp  gzstream.h
src/libgwaspp/: CMakeLists.txt  libgwaspp.h  libgwasppConfig.h  serializable.h
src/libgwaspp/algorithms/: computation_engine.cpp  computation_engine.h  epistasis_func.cpp  epistasis_func.h  genetic_data_func.cpp  genetic_data_func.h  maf_func.cpp  maf_func.h
src/libgwaspp/genetics/: CMakeLists.txt  genetic_data.cpp  genetic_data.h  genetic_data_file.h
src/libgwaspp/genetics/analyzable/: case_control_set.cpp  case_control_set.h
src/libgwaspp/genetics/chromosome/: CMakeLists.txt  chromosomal_interval.cpp  chromosomal_interval.h  chromosome.cpp  chromosome.h  chromosome_collection.cpp  chromosome_collection.h  chromosome_exceptions.h  chromosome_lookup_table.cpp  chromosome_lookup_table.h  chromosome_table.cpp  chromosome_table.h
src/libgwaspp/genetics/genotype/: CMakeLists.txt  basic_genotype_table.cpp  basic_genotype_table.h  case_control_selectable.h  common_genotype.h  common_genotype_func.cpp  common_genotype_func.h  compressed_genotype_table.cpp  compressed_genotype_table.h  compressed_genotype_table2.cpp  compressed_genotype_table2.h  compressed_genotype_table3.cpp  compressed_genotype_table3.h  compressed_genotype_table4.cpp  compressed_genotype_table4.h  compressed_genotype_table5.cpp  compressed_genotype_table5.h  geno_table.cpp  geno_table.h  genotype.h  genotype_collection.cpp  genotype_collection.h  genotype_exceptions.h  genotype_lookup_table.cpp  genotype_lookup_table.h  genotype_record.cpp  genotype_record.h  genotype_record_factory.cpp  genotype_record_factory.h  genotype_table.cpp  genotype_table.h  genotype_table2.cpp  genotype_table2.h  genotype_tables.h  pairwise_marker_analyzable.h  single_marker_analyzable.h
src/libgwaspp/genetics/individual/: CMakeLists.txt  illumina_annotation_file.cpp  illumina_annotation_file.h  individual.cpp  individual.h  individual_collection.cpp  individual_collection.h  individual_genotype_file.cpp  individual_genotype_file.h  individual_phenotype_file.cpp  individual_phenotype_file.h  tfam_annotation_file.cpp  tfam_annotation_file.h  tfam_phenotype_file.cpp  tfam_phenotype_file.h  tped_genotype_file.cpp  tped_genotype_file.h
src/libgwaspp/genetics/marker/: CMakeLists.txt  allele.h  allele_collection.cpp  allele_collection.h  allele_form.cpp  allele_form.h  allele_lookup_table.cpp  allele_lookup_table.h  marker.cpp  marker.h  marker_collection.cpp  marker_collection.h  snp_lookup_table.cpp  snp_lookup_table.h  snp_marker.cpp  snp_marker.h
src/libgwaspp/genetics/phenotype/: CMakeLists.txt  phenotype.cpp  phenotype.h  phenotype_tree.cpp  phenotype_tree.h
src/libgwaspp/genetics/trait/: CMakeLists.txt  qualitative_trait.cpp  qualitative_trait.h  quantitative_trait.cpp  quantitative_trait.h  trait.cpp  trait.h  trait_collection.cpp  trait_collection.h
src/libgwaspp/validation_tests/: validate_func.cpp  validate_func.h
src/test/: CMakeLists.txt  gwas_basic.cpp  main.cpp  pairwise.c
src/util/: CMakeLists.txt
src/util/category/: category.h
src/util/exceptions/: CMakeLists.txt  exceptions.h
src/util/homomorphic/: homomorphic_map.cpp  homomorphic_map.h
src/util/index_set/: index_iterator.h  index_set.cpp  index_set.h  indexable.h  indexer.h  ordered_index_set.cpp  ordered_index_set.h
src/util/interval/: CMakeLists.txt  interval.cpp  interval.h
src/util/lookup_table/: CMakeLists.txt  lookup_table.cpp  lookup_table.h
src/util/memory/: memory_block.h  tile.cpp  tile.h  tile_iterator.cpp  tile_iterator.h
src/util/table/: table.h
src/util/time/: timing.cpp  timing.h
