SET(LIBRARIES util gzstream libgwaspp test)

FOREACH(LIB ${LIBRARIES})
	ADD_SUBDIRECTORY(${LIB})
ENDFOREACH(LIB)

#FOREACH(LIB ${LIBRARIES})
#	UNSET(SRCFILES)
#	include_directories(${BIOLIB2_SOURCE_DIR}/src/${LIB})
#	FILE(GLOB_RECURSE SRCFILES ${LIB} *.cpp)
#	FILE(GLOB_RECURSE HEADERFILES ${LIB} *.h)
#
#	UNSET(subLib)
#	FOREACH(LIBSRC ${SRCFILES})
#		GET_FILENAME_COMPONENT(SRC_NAME ${LIBSRC} NAME_WE)
#		ADD_LIBRARY(${SRC_NAME} SHARED ${LIBSRC})
#		LIST(APPEND subLib ${SRC_NAME})
#	ENDFOREACH(LIBSRC)
#
#	TARGET_LINK_LIBRARIES(${LIB} ${subLib})
#
#	INSTALL(TARGETS ${LIB} DESTINATION ${BIOLIB2_BINARY_DIR}/lib)	
#	INSTALL(FILES ${HEADERFILES} DESTINATION ${BIOLIB2_BINARY_DIR}/include)
#ENDFOREACH(LIB)

#SET(TESTS test)
#UNSET(SRCFILES)

#FILE(GLOB_RECURSE SRCFILES ${TESTS} *.cpp)

#FOREACH(EXE_SRC ${SRCFILES})
#	GET_FILENAME_COMPONENT(EXE_NAME ${EXE_SRC} NAME_WE)
#	ADD_EXECUTABLE(${EXE_NAME} ${EXE_SRC})
#	TARGET_LINK_LIBRARIES(${EXE_NAME} ${LIBRARIES})
#
#	INSTALL(TARGETS ${EXE_NAME} DESTINATION ${BIOLIB2_BINARY_DIR}/test)
#ENDFOREACH(EXE)
