# Genetic Objects
LIST(APPEND SRCS serializable.cpp)
LIST(APPEND SRCS genetics/analyzable/case_control_set.cpp)
LIST(APPEND SRCS genetics/individual/individual.cpp)
LIST(APPEND SRCS genetics/individual/individual_collection.cpp)
LIST(APPEND SRCS genetics/chromosome/chromosome.cpp)
LIST(APPEND SRCS genetics/chromosome/chromosome_lookup_table.cpp)
LIST(APPEND SRCS genetics/chromosome/chromosomal_interval.cpp)
LIST(APPEND SRCS genetics/chromosome/chromosome_table.cpp)
LIST(APPEND SRCS genetics/chromosome/chromosome_collection.cpp)
LIST(APPEND SRCS genetics/marker/allele_collection.cpp)
LIST(APPEND SRCS genetics/marker/allele_form.cpp)
LIST(APPEND SRCS genetics/marker/marker.cpp)
LIST(APPEND SRCS genetics/marker/marker_collection.cpp)
LIST(APPEND SRCS genetics/genotype/common_genotype_func.cpp)
LIST(APPEND SRCS genetics/genotype/genotype_collection.cpp)
LIST(APPEND SRCS genetics/genotype/genotype_record.cpp)
LIST(APPEND SRCS genetics/genotype/genotype_record_factory.cpp)
LIST(APPEND SRCS genetics/genotype/genotype_record_factory.cpp)
LIST(APPEND SRCS genetics/genotype/genotype_table2.cpp)
LIST(APPEND SRCS genetics/genotype/geno_table.cpp)
LIST(APPEND SRCS genetics/genotype/basic_genotype_table.cpp)
LIST(APPEND SRCS genetics/genotype/compressed_genotype_table.cpp)
LIST(APPEND SRCS genetics/genotype/compressed_genotype_table2.cpp)
LIST(APPEND SRCS genetics/genotype/compressed_genotype_table3.cpp)

LIST(APPEND SRCS genetics/phenotype/phenotype.cpp)
LIST(APPEND SRCS genetics/phenotype/phenotype_tree.cpp)
LIST(APPEND SRCS genetics/trait/quantitative_trait.cpp)
LIST(APPEND SRCS genetics/trait/qualitative_trait.cpp)
LIST(APPEND SRCS genetics/trait/trait.cpp)
LIST(APPEND SRCS genetics/genetic_data.cpp)

LIST(APPEND SRCS genetics/individual/individual_phenotype_file.cpp)
LIST(APPEND SRCS genetics/individual/individual_genotype_file.cpp)
LIST(APPEND SRCS genetics/individual/tped_genotype_file.cpp)
LIST(APPEND SRCS genetics/individual/tfam_phenotype_file.cpp)
LIST(APPEND SRCS genetics/individual/illumina_annotation_file.cpp)
LIST(APPEND SRCS genetics/individual/tfam_annotation_file.cpp)

LIST(APPEND SRCS algorithms/genetic_data_func.cpp)
LIST(APPEND SRCS algorithms/epistasis_func.cpp)
LIST(APPEND SRCS algorithms/computation_engine.cpp)
LIST(APPEND SRCS algorithms/maf_func.cpp)

LIST(APPEND SRCS validation_tests/validate_func.cpp)

include_directories(${PROJECT_SOURCE_DIR}/src/libgwaspp ${PROJECT_SOURCE_DIR}/src ${Boost_INCLUDE_DIR})
link_directories(${PROJECT_BINARY_DIR}/lib rt)

#FOREACH(SRC ${SRCS})
#	GET_FILENAME_COMPONENT(SRC_NAME ${SRC} NAME_WE)
#	ADD_LIBRARY(${SRC_NAME} OBJECT ${SRC})
#	LIST(APPEND TAROBJS $<TARGET_OBJECTS:${SRC_NAME}>)
#ENDFOREACH(DIR)

ADD_LIBRARY(libgwaspp SHARED ${SRCS} ${HEADERS} ${R_MATH})
#TARGET_LINK_LIBRARIES(libgwaspp)

